# tasks

./: .gitignore  README.md  flake.nix  module.nix  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  routes.py
app/static/: app.js  styles.css
app/templates/: index.html
tasks/: __init__.py  db.py
tasks/static/: app.js
tasks/templates/: index.html
tests/: test_api.py
